--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@foxone/community-vue",
+  "name": "@foxone/pando-lots-vue",
   "version": "0.0.1",
   "description": "",
   "main": "lib/index.js",
