--- a/package.json
+++ b/package.json
@@ -27,12 +27,20 @@
   "keywords": [],
   "author": "",
   "peerDependencies": {
+    "@foxone/icons": "3.x.x",
+    "@foxone/uikit": "3.x.x",
+    "@foxone/utils": "0.2.x",
+    "@mdi/js": "5.x.x",
     "@vue/composition-api": "1.x.x",
-    "vue": "2.6.x"
+    "bignumber.js": "9.x.x",
+    "vue": "2.6.x",
+    "vuetify": "2.x.x"
   },
   "license": "ISC",
   "dependencies": {
-    "classnames": "~2.2.6"
+    "@foxone/vue-scroll": "~0.1.2",
+    "classnames": "~2.2.6",
+    "peeler-js": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "~7.10.0",
@@ -44,7 +52,11 @@
     "@babel/preset-env": "~7.10.0",
     "@babel/preset-typescript": "~7.10.0",
     "@commitlint/cli": "8.3.5",
-    "@omni-door/cli": "~2.5.5",
+    "@foxone/icons": "3.0.1-53",
+    "@foxone/uikit": "3.0.1-58",
+    "@foxone/utils": "~0.2.22",
+    "@mdi/js": "^6.5.95",
+    "@omni-door/cli": "~2.5.7",
     "@omni-door/gulp-plugin-vue-sfc": "~0.1.0",
     "@storybook/addon-actions": "5.3.21",
     "@storybook/addon-console": "1.2.2",
@@ -96,9 +108,9 @@
     "jest": "~26.6.3",
     "jest-transform-stub": "2.0.0",
     "lint-staged": "10.0.7",
-    "node-sass": "~4.14.1",
     "prettier": "~2.3.2",
-    "sass-loader": "~8.0.2",
+    "sass": "~1.49.0",
+    "sass-loader": "~10.2.1",
     "storybook-readme": "5.0.8",
     "style-loader": "~1.1.3",
     "stylelint": "13.2.0",
@@ -122,6 +134,7 @@
     "vue-jest": "~4.0.1",
     "vue-loader": "~15.7.0",
     "vue-property-decorator": "~9.1.2",
-    "vue-template-compiler": "~2.6.8"
+    "vue-template-compiler": "~2.6.8",
+    "vuetify": "~2.6.2"
   }
 }
