--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@foxone/vue-scroll": "~0.1.2",
+    "@foxone/vue-scroll": "~0.1.3",
     "classnames": "~2.2.6",
-    "peeler-js": "^0.4.2"
+    "peeler-js": "^0.4.2",
+    "xgplayer": "~2.31.4",
+    "xgplayer-hls.js": "~2.6.1",
+    "xgplayer-mp4": "~1.2.4"
   },
   "devDependencies": {
     "@babel/core": "~7.10.0",
@@ -109,7 +112,7 @@
     "jest-transform-stub": "2.0.0",
     "lint-staged": "10.0.7",
     "prettier": "~2.3.2",
-    "sass": "~1.49.0",
+    "sass": "~1.32.12",
     "sass-loader": "~10.2.1",
     "storybook-readme": "5.0.8",
     "style-loader": "~1.1.3",
