--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "classnames": "~2.2.6",
     "dayjs": "~1.10.7",
     "peeler-js": "^0.4.2",
+    "vue-content-loader": "~0.2.3",
     "xgplayer": "~2.31.4",
     "xgplayer-hls.js": "~2.6.1",
     "xgplayer-mp4": "~1.2.4"
