--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "module": "es/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "start": "omni dev",
-    "dev": "omni dev",
+    "start": "APP_ENV=development omni dev",
+    "dev": "APP_ENV=development omni dev",
     "test": "jest --passWithNoTests",
     "test:snapshot": "jest --updateSnapshot",
     "lint": "npm run lint:prettier && npm run lint:es && npm run lint:style",
@@ -38,7 +38,9 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@foxone/mixin-sdk-jsbridge": "^0.5.0",
     "@foxone/vue-scroll": "~0.1.3",
+    "axios": "^0.26.0",
     "classnames": "~2.2.6",
     "dayjs": "~1.10.7",
     "peeler-js": "^0.4.2",
