--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "module": "es/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "start": "APP_ENV=development omni dev",
-    "dev": "APP_ENV=development omni dev",
+    "start": "omni dev",
+    "dev": "omni dev",
     "test": "jest --passWithNoTests",
     "test:snapshot": "jest --updateSnapshot",
     "lint": "npm run lint:prettier && npm run lint:es && npm run lint:style",
@@ -38,6 +38,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@foxone/fennec-dapp": "^0.5.4",
     "@foxone/mixin-sdk-jsbridge": "^0.5.0",
     "@foxone/vue-scroll": "~0.1.3",
     "axios": "^0.26.0",
@@ -92,6 +93,7 @@
     "css-loader": "~3.4.2",
     "del": "5.1.0",
     "detect-port": "1.3.0",
+    "dotenv": "^16.0.0",
     "eslint": "~7.30.0",
     "eslint-config-prettier": "~8.3.0",
     "eslint-plugin-prettier": "~3.4.0",
