--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "license": "ISC",
   "dependencies": {
     "@foxone/fennec-dapp": "^0.5.4",
+    "@foxone/mixin-api": "^0.1.6",
     "@foxone/mixin-sdk-jsbridge": "^0.5.0",
     "@foxone/vue-scroll": "~0.1.3",
     "axios": "^0.26.0",
