[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-alpha.5

--- a/.github/workflows/cicd-npm.yml
+++ b/.github/workflows/cicd-npm.yml
@@ -31,7 +31,7 @@ jobs:
 
     - run: yarn --frozen-lockfile --non-interactive
 
-    - run: yarn build -n
+    - run: yarn build
 
     - name: Deploy Npm
       uses: JS-DevTools/npm-publish@v1
