--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxone/pando-lots-vue",
-  "version": "0.0.1-alpha.16",
+  "version": "0.0.1-alpha.17",
   "description": "The vue components for commuity",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -39,7 +39,7 @@
   "license": "ISC",
   "dependencies": {
     "@foxone/fennec-dapp": "^0.5.4",
-    "@foxone/mixin-sdk-jsbridge": "^0.5.0",
+    "@foxone/mixin-sdk-jsbridge": "~0.5.1",
     "@foxone/vue-scroll": "~0.1.3",
     "axios": "^0.26.0",
     "classnames": "~2.2.6",
