--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxone/pando-lots-vue",
-  "version": "0.0.1-beta.7",
+  "version": "0.0.1-beta.8",
   "description": "The vue components for commuity",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -44,6 +44,7 @@
     "axios": "^0.26.0",
     "classnames": "~2.2.6",
     "dayjs": "~1.10.7",
+    "js-base64": "^3.7.2",
     "peeler-js": "^0.4.2",
     "vue-content-loader": "~0.2.3",
     "xgplayer": "~2.31.4",
