--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxone/pando-lots-vue",
-  "version": "0.0.1-beta.15",
+  "version": "0.1.0",
   "description": "The vue components for commuity",
   "main": "lib/index.js",
   "module": "es/index.js",
