--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxone/pando-lots-vue",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "The vue components for commuity",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -16,8 +16,8 @@
     "lint:es_fix": "eslint src/ --ext .ts --ext .tsx --ext .vue --fix",
     "lint:prettier": "prettier --check src/",
     "lint:prettier_fix": "prettier --write src/",
-    "lint:style": "stylelint src/**/*.{css,less,scss,sass} --allow-empty-input",
-    "lint:style_fix": "stylelint src/**/*.{css,less,scss,sass} --fix --allow-empty-input",
+    "lint:style": "stylelint \"src/**/*.{css,less,scss,sass}\" --allow-empty-input",
+    "lint:style_fix": "stylelint \"src/**/*.{css,less,scss,sass}\" --fix --allow-empty-input",
     "lint:commit": "commitlint -e $HUSKY_GIT_PARAMS",
     "new": "omni new",
     "build": "omni build",
@@ -126,13 +126,13 @@
     "storybook-readme": "5.0.8",
     "style-loader": "~1.1.3",
     "stylelint": "13.13.1",
-    "stylelint-config-css-modules": "2.2.0",
-    "stylelint-config-prettier": "8.0.1",
+    "stylelint-config-css-modules": "2.3.0",
+    "stylelint-config-prettier": "8.0.2",
     "stylelint-config-rational-order": "0.1.2",
     "stylelint-config-standard": "20.0.0",
     "stylelint-declaration-block-no-ignored-properties": "2.2.0",
-    "stylelint-order": "4.0.0",
-    "stylelint-scss": "3.14.2",
+    "stylelint-order": "4.1.0",
+    "stylelint-scss": "3.21.0",
     "through2": "4.0.1",
     "ts-jest": "~26.5.6",
     "ts-node": "8.6.2",
