--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxone/pando-lots-vue",
-  "version": "0.1.6-1",
+  "version": "0.1.6-2",
   "description": "The vue components for commuity",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -62,9 +62,9 @@
     "@babel/preset-env": "~7.10.0",
     "@babel/preset-typescript": "~7.10.0",
     "@commitlint/cli": "8.3.5",
-    "@foxone/icons": "3.0.1-53",
+    "@foxone/icons": "3.1.3-1",
     "@foxone/mixin-api": "^0.1.6",
-    "@foxone/uikit": "3.0.1-58",
+    "@foxone/uikit": "^3.1.5-0",
     "@foxone/utils": "~0.2.22",
     "@mdi/js": "^6.5.95",
     "@omni-door/cli": "~2.5.7",
